# Deteccion-de-patrones-en-multiples-archivos

./: CMakeLists.txt  README.md  experimentos.sh  main.cpp  resultados.csv
algoritmos/: Boyer-Moore.cpp  Boyer-Moore.h  Knuth-Morris-Pratt.cpp  Knuth-Morris-Pratt.h  Robin-Karp.h  rabinkarp.cpp  rabinkarp.h
datasets/Pequenos/: texto_001.txt  texto_002.txt  texto_003.txt  texto_004.txt  texto_005.txt  texto_006.txt  texto_007.txt  texto_008.txt  texto_009.txt  texto_010.txt  texto_011.txt  texto_012.txt  texto_013.txt  texto_014.txt  texto_015.txt  texto_016.txt  texto_017.txt  texto_018.txt  texto_019.txt  texto_020.txt  texto_021.txt  texto_022.txt  texto_023.txt  texto_024.txt  texto_025.txt  texto_026.txt  texto_027.txt  texto_028.txt  texto_029.txt  texto_030.txt  texto_031.txt  texto_032.txt  texto_033.txt  texto_034.txt  texto_035.txt  texto_036.txt  texto_037.txt  texto_038.txt  texto_039.txt  texto_040.txt  (+60 more)
estructuras/: suffix_array.cpp  suffix_array.h
patrones/: Patrones_Existentes  Patrones_NoExistentes  patrones
utils/: cargarDocumentos.cpp  cargarDocumentos.h  generarPatrones.cpp
